@@ -461,8 +461,11 @@ plugin.tx_seminars_pi1 {
 	# comma-separated list of the fields to show in the FE-editor
 	displayFrontEndEditorFields = subtitle,accreditation_number,credit_points,categories,event_type,cancelled,teaser,description,additional_information,begin_date,end_date,begin_date_registration,deadline_early_bird,deadline_registration,needs_registration,allows_multiple_registrations,queue_size,offline_attendees,attendees_min,attendees_max,target_groups,price_regular,price_regular_early,price_regular_board,price_special,price_special_early,price_special_board,payment_methods,place,room,lodgings,foods,speakers,leaders,partners,tutors,checkboxes,uses_terms_2,attached_file_box,notes
 
-	# comma-separated list of the fields which are required to be filled in the FE-edior
+	# comma-separated list of the event fields which are required to be filled in the FE editor
 	requiredFrontEndEditorFields =
+
+	# comma-separated list of the place fields which are required to be filled in the FE editor
+	requiredFrontEndEditorPlaceFields = city
 
 	# UID of the payment method that corresponds to "bank transfer"
 	bankTransferUID =
